221009: dark mode fix

--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -104,6 +104,9 @@ body {
       .www {
         .button-eff {
           background-color: transparent;
+          &:hover {
+            background-color: $mainColor;
+          }
         }
       }
     }
